Add challenge exception